chore: add api endpoit to update blog pages

--- a/internal/html/blog_nav.html
+++ b/internal/html/blog_nav.html
@@ -19,29 +19,11 @@
                                     <a class="navi" href="/home">Home</a>
                                 </li>
 
-                                <li class="drop d-none">
-                                    <a href="blog-three-column.html">Blog</a>
-                                    <ul class="dropdown">
-                                        <li><a href="blog-three-column.html">Blog Three Column</a></li>
-                                        <li><a href="blog-two-column.html">Blog Two Column</a></li>
-                                        <li><a href="blog-sidebar.html">Blog Sidebar</a></li>
-                                        <li><a href="blog-details.html">Blog Details</a></li>
-                                    </ul>
-                                </li>
+
                                 <li>
-                                    <a href="/about" class="navi">About</a>
+                                    <a href="/about_us" class="navi">About</a>
                                 </li>
-                                <li class="drop">
-                                    <a href="#">pages</a>
-                                    <ul class="dropdown">
-                                        <li><a href="cart.html">Cart Page</a></li>
-                                        <li><a href="compare.html">Compare Page</a></li>
-                                        <li><a href="wishlist.html">Wishlist Page</a></li>
-                                        <li><a href="my-account.html">My Account</a></li>
-                                        <li><a href="checkout.html">Checkout Page</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
-                                    </ul>
-                                </li>
+
                                 <li>
                                     <a class="navi" href="/contact">Contact</a>
                                 </li>
@@ -83,9 +65,10 @@
             <a class="navi" href="/home">Home</a>
 
         </li>
+        <li>
+            <a class="navi" href="/about_us">About</a>
 
-
-
+        </li>
         <li>
             <a class="navi" href="/contact">Contact</a>
         </li>
